UsabilityInitiative: Template folding works now, yay! Replace the wrapElement() function in the marker objects with needsWrap() and afterWrap(). Rewrite stylize() so it can be used as an afterWrap() callback. Minor fixes. Haven't tested this extensively yet, still has some known issues.
git-svn-id: file:///home/git-svn-mirror/pushmi-svn-mirror/trunk@60127 dd0e9695-b195-4be7-bd10-2dea1a65a6b6

--- a/extensions/UsabilityInitiative/css/wikiEditor.highlight.css
+++ b/extensions/UsabilityInitiative/css/wikiEditor.highlight.css
@@ -2,11 +2,27 @@
  * not in the main document. For that reason, it's also not in the combined and
  * minified files.
  */
-.wikiEditor-highlight-template {
-	display: inline;
-	color: red;
+
+/* Wikitext that's folded away and shouldn't be displayed */
+.wikiEditor-nodisplay {
+	display: none;
 }
 
+/* A collapsed template */
+.wikiEditor-template-collapsed {
+	display: inline;
+	cursor: pointer;
+	color: red;
+	text-decoration: underline;
+}
+
+/* An expanded template */
+.wikiEditor-template-expanded {
+	display: inline;
+	cursor: pointer;
+}
+
+/* == Header == */
 .wikiEditor-toc-header { /* TODO: move parsing to highlight module and rename this */
 	display: inline;
 	font-weight: bold;
